# trading-signal-copier

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  design-qa.md  start-linux.sh
.codex/: config.toml
.codex/skills/dokploy-trading-signal-copier/: SKILL.md
.codex/skills/dokploy-trading-signal-copier/agents/: openai.yaml
.codex/skills/dokploy-trading-signal-copier/references/: deployment-topology.md
.codex/skills/dokploy-trading-signal-copier/scripts/: dokploy_read.mjs
.cursor/: mcp.json
.github/workflows/: application-ci.yml  infra.yml
.hermes/plans/: 2026-07-01_042046-trading-platform-expansion.md  2026-07-10_182037-strategy-lab-release-1.md
api/: .env.example  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_app_schema.py  0002_identity_accounts.py  0003_copy_marketplace.py  0004_rebind_workos_identity.py
api/src/: access_store.py  account_store.py  broker_catalog.py  clerk_client.py  config.py  credential_envelope.py  dependencies.py  main.py  platform_store.py  runtime_data.py  security.py  session_payload.py  shared_telegram.py  workos_client.py
api/src/db/: __init__.py  base.py  health.py  runtime.py  session.py
api/src/models/: __init__.py  account.py  audit.py  common.py  copy.py  user.py
api/src/repositories/: __init__.py  accounts.py  copy.py  users.py
api/src/routers/: __init__.py  access.py  account.py  accounts.py  analysis.py  auth.py  bot.py  config.py  copy.py  deprecated.py  health.py  mt5.py  orders.py  platform.py  prompts.py  symbols.py  telegram.py
api/src/schemas/: account.py  copy.py
api/src/services/: copy_legacy_migration.py  copy_worker.py  history_service.py
api/src/trading/: __init__.py  executor.py  models.py  mt5_adapter.py
api/src/websocket/: broadcaster.py  log_manager.py  manager.py
api/tests/: test_access_session.py  test_better_auth_security.py  test_broker_catalog.py  test_copy_marketplace.py  test_feature_flags.py  test_health_api.py  test_mt5_brokers_api.py  test_mt5_image_contract.py  test_mt5_runtime_hardening.py  test_multi_account.py  test_platform_api.py  test_platform_store.py  test_websocket_broadcaster.py  test_workos_security.py
api/tests/db/: test_database.py
api/tests/repositories/: conftest.py  test_accounts.py  test_users.py
bot/: .env.local  pyproject.toml
bot/scripts/: analyze_signals.py  fetch_signals.py  report_signal_outcomes.py
bot/src/tania_signal_copier/: executor.py  mt5_adapter.py  parser.py
bot/tests/: test_executor_partial_close.py  test_mt5_programmatic_login.py
dashboard/: .env.example  README.md  next.config.ts  package.json  vitest.config.ts
dashboard/migrations/auth/: 0001_better_auth.sql
dashboard/public/brokers/: README.md
dashboard/scripts/: apply-auth-schema.test.ts  apply-auth-schema.ts  auth-schema-contract.test.ts  auth-schema.test.ts  auth-schema.ts  generate-auth-schema.ts  validate-auth-schema.ts
dashboard/src/: proxy.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/access/: page.tsx
dashboard/src/app/analysis/: page.tsx
dashboard/src/app/auth/: actions.ts
dashboard/src/app/bot/: page.tsx
dashboard/src/app/config/: page.tsx
dashboard/src/app/copy-trading/: copy-trading-client.tsx  page.tsx
dashboard/src/app/history/: page.tsx
dashboard/src/app/orders/: page.tsx
dashboard/src/app/platform/: page.tsx
dashboard/src/app/positions/: page.test.ts  page.tsx
dashboard/src/app/reset-password/: page.tsx
dashboard/src/app/risk/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/setup/: page.tsx
dashboard/src/app/sign-in/: page.tsx
dashboard/src/app/sign-up/: page.tsx
dashboard/src/components/auth/: ambient-auth-shader.tsx  auth-screen.tsx  auth-shell.tsx  better-auth-sign-in.tsx  better-auth-sign-up.tsx  clerk-root-provider.tsx  google-sign-in-button.tsx  turnstile.tsx  workos-reset-password-form.tsx  workos-sign-in-form.tsx  workos-sign-up-form.tsx
dashboard/src/components/dashboard/: account-card.tsx  asset-breakdown.tsx  (+13 more)
dashboard/src/hooks/: use-websocket.test.ts  use-websocket.ts
dashboard/src/lib/: api-error.ts  api-session-route.test.ts  api-token.test.ts  api.ts  auth-client.test.ts  auth-client.ts  auth-mode.test.ts  auth-mode.ts  auth-storage.ts  auth.ts  better-auth-actions.test.ts  better-auth-actions.ts  broker-brands.test.ts  broker-brands.ts  broker-servers.ts  clerk-token.ts  constants.ts  dashboard-access.test.ts  dashboard-access.ts  proxy-policy.test.ts  proxy-policy.ts  symbol-icon-resolver.ts  workos-auth.test.ts  workos-auth.ts
dashboard/src/test/: workos-authkit-components.ts  workos-authkit-server.ts
dashboard/src/types/: index.ts
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
infra/: README.md  pyproject.toml  test.sh
infra/gvisor/: common.sh  health-contract.json  install.sh  rollback.md  rollback.sh  verify.sh
infra/stalwart/: README.md  backup-policy.yaml  bootstrap.sh  certificate.manual.json  check-mail.sh  compose.bootstrap.yaml  compose.local.yaml  compose.recovery.yaml  compose.tls-mounted.yaml  compose.yaml  listener-policy.json  network-policy.yaml  tls-policy.yaml  verify-listeners.py
infra/tests/: test_gvisor.py  test_stalwart.py
mt5/: Dockerfile  README.md  compose.local.yaml  compose.yaml  ensure-production-network.sh  patch-start.py  smoke-rpyc.py
strategy-sdk/: README.md  pyproject.toml
strategy-sdk/src/trading_strategy_sdk/: __init__.py  _model.py  context.py  events.py  intents.py  market.py  orders.py  output.py  positions.py  results.py  spec.py  state.py
strategy-sdk/tests/: test_context_output_regressions.py  test_contextual_intents_regression.py  test_lifecycle_results.py  test_no_direct_volume.py  test_no_lookahead.py  test_order_lifecycle_regression.py  test_order_semantics_regression.py  test_orders.py  test_packaging.py  test_position_modes.py  test_public_api.py  test_sdk_boundary.py  test_spec.py  test_validation_regressions.py
(+33 files in other folders)
