[project]
name = "trading-dashboard-api"
version = "0.1.0"
description = "FastAPI backend for trading dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.10.0",
    "aiosqlite>=0.21.0",
    "websockets>=14.0",
    "siliconmetatrader5>=1.1.0",
    "rpyc==6.0.2; sys_platform == 'linux'",
    "numpy>=2.0.0",
    "cryptography>=49.0.0",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "httpx2>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"] # FastAPI dependencies intentionally use Depends() defaults.

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires TEST_DATABASE_URL pointing to a disposable PostgreSQL database",
]
